--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
             height: 100%;
         }
     </style>
-    <!-- <img src="/img/spacecraft.png" id="spacecraft" /> -->
 </head>
 <body>
     <canvas id="canvas"></canvas>
 
     <script src="main.js"></script>
-
+    <script src="game.js"></script>
+    <script src="entity.js"></script>
+    <script src="spacecraft.js"></script>
+    <script src="thruster.js"></script>
+    <script src="asteroid.js"></script>
 </body>
 </html>
