--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,11 +18,11 @@
 <body>
     <canvas id="canvas"></canvas>
 
-    <script src="main.js"></script>
-    <script src="game.js"></script>
-    <script src="entity.js"></script>
-    <script src="spacecraft.js"></script>
-    <script src="thruster.js"></script>
-    <script src="asteroid.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/game.js"></script>
+    <script src="js/entity.js"></script>
+    <script src="js/spacecraft.js"></script>
+    <script src="js/thruster.js"></script>
+    <script src="js/asteroid.js"></script>
 </body>
 </html>
