--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,5 +24,6 @@
     <script src="js/spacecraft.js"></script>
     <script src="js/thruster.js"></script>
     <script src="js/asteroid.js"></script>
+    <script src="js/animation.js"></script>
 </body>
 </html>
