gameover screen, possibility to restart game, explosion animation, fonts

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,14 @@
             padding: 0;
             overflow: hidden;
         }
+        @font-face {
+            font-family: astrospace;
+            src: url(font/AstroSpace.ttf);
+        }
+        @font-face {
+            font-family: justbreathe;
+            src: url(font/JustBreatheBoldObliquethree.otf);
+        }
         #canvas {
             position: absolute;
             width: 100%;
@@ -24,6 +32,7 @@
     <script src="js/spacecraft.js"></script>
     <script src="js/thruster.js"></script>
     <script src="js/asteroid.js"></script>
+    <script src="js/rocket.js"></script>
     <script src="js/animation.js"></script>
 </body>
 </html>
